<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">


    <LinearLayout
        android:id="@+id/textViewRegister"
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:fontFamily="@font/convergence"
            android:text="@string/login"
            android:textColor="#7C4C30" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/modifiedEditText"
                android:autofillHints=""
                android:fontFamily="@font/convergence"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            app:passwordToggleTint="#7C4C30">

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:autofillHints=""
                android:fontFamily="@font/convergence"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textViewForgotPass"
            style="@style/viewParent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/convergence"
            android:text="@string/forgot_password"
            android:textColor="#7C4C30"
            android:textSize="@dimen/newsMoreTextSize" />

        <Button
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:fontFamily="@font/convergence"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textViewSignUp"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:fontFamily="@font/convergence"
            android:onClick="register"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="#7C4C30"
            android:textStyle="bold" />


    </LinearLayout>


</android.support.v7.widget.CardView>
