...
<!--                    android:padding="10dp"-->
<!--                    android:text="Name"-->
<!--                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"-->
<!--                    android:textSize="14sp" />-->

<!--                <TextView-->
<!--                    android:id="@+id/textViewName"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:padding="10dp"-->
<!--                    android:text=""-->
<!--                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"-->
<!--                    android:textSize="14sp" />-->
...
